# genOBJ

./: CMakeLists.txt
src/: main.cpp
src/genImage/: main.py
src/genOBJ/: genOBJ.cpp  genOBJ.h  math.h
